# crucible

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
crucible/learning/: architectures.py  gate.py  integrity.py  loop.py  policy.py  reward.py  routing.py
crucible/selfmod/: llm_proposer.py  loop.py  world.py
data/: replay_sample.jsonl
demo/: self_improve.py  self_modify.py
docs/: LIMITATIONS.md
tests/: test_gate.py  test_integrity.py  test_llm_proposer.py  test_routing.py  test_selfmod.py
