[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Measurement-first offline self-improvement loop for LLM agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
learn = ["torch>=2.0", "numpy>=1.20"]
charts = ["matplotlib>=3.8"]
llm = ["openai>=1.0"]  # optional: LLM proposer for `demo.self_modify --llm`
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["crucible*"]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
